#17535 closed bug (fixed)
(regression) Kernel panic from intel_extreme driver on hrev55785 on reboot
Reported by: | rjzak | Owned by: | korli |
---|---|---|---|
Priority: | normal | Milestone: | R1/beta4 |
Component: | Drivers/Graphics/intel_extreme | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | #17645 | |
Platform: | x86-64 |
Description
After updating to hrev77585, it seems the kernel panics due to the intel_extreme driver.
Attachments (3)
Change History (7)
by , 13 months ago
Attachment: | haiku_hrev55785_syslog added |
---|
by , 13 months ago
Attachment: | haiku_hrev55785_syslog.old added |
---|
by , 13 months ago
Attachment: | haiku_shutdown_intel_extreme_panic.png added |
---|
comment:1 by , 10 months ago
Milestone: | Unscheduled → R1/beta4 |
---|---|
Owner: | changed from | to
Status: | new → assigned |
Summary: | Kernel panic from intel_extreme driver on hrev55785 on reboot → (regression) Kernel panic from intel_extreme driver on hrev55785 on reboot |
comment:3 by , 10 months ago
Resolution: | → fixed |
---|---|
Status: | assigned → closed |
Version: | R1/beta3 → R1/Development |
Should be fixed with hrev55962
comment:4 by , 10 months ago
Blocking: | 17645 added |
---|
Note:
See TracTickets
for help on using tickets.
seems introduced in hrev55758